feat: tudo funcionando show, agora só terminar os testes.